--- a/.github/pull.yml
+++ b/.github/pull.yml
@@ -3,3 +3,5 @@ rules:
   - base: master
     upstream: ast3risk-ops:master    # change `wei` to the owner of upstream repo
     mergeMethod: merge
+    conflictReviewers:
+      - ast3risk-ops
